# qwen-qwen

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.telegram  README.md  SESSION_HANDOFF.md  design-system.md  docker-compose.telegram.yml  fly.toml
.agents/skills/: README.md  SKILLS_INDEX.md
.agents/skills/audit-design/: SKILL.md
.agents/skills/color-palette/: SKILL.md
.agents/skills/generate-component/: SKILL.md
.agents/skills/minecraft-ci-release/: SKILL.md
.agents/skills/minecraft-commands-scripting/: SKILL.md
.agents/skills/minecraft-modding/: SKILL.md
.agents/skills/tailwind-ui-rules/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  fireworks.py  freetheai_client.py  gemini_proxy.py  main.py  models.py  nvidia_client.py  nvidia_image.py  routes.py  schemas.py  web_tools.py
backend/app/gemini_proxy_standalone/: README.md  __init__.py  provider.py
backend/app/telegram/: __init__.py  __main__.py  bot.py  handlers.py  model_resolver.py
docs/: DOMAIN.md  FREETHEAI_INTEGRATION.md
docs/superpowers/plans/: 2026-05-11-full-redesign-chat.md
docs/superpowers/specs/: 2026-05-11-full-redesign-chat-design.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ChatView.tsx  Composer.tsx  DesignPicker.tsx  EmptyState.tsx  Markdown.tsx  MessageBubble.tsx  ModelAvatar.tsx  ModelPicker.tsx  ResponseModePicker.tsx  Sidebar.tsx  (+1 more)
scripts/: dev.sh
(+15 files in other folders)
